# gihyo-samples

./: .gitignore
202408-chap2-and-5-langchain/: 2-01-chatmodel_openai.py  2-02-prompttemplate_string.py  2-03-prompttemplate_chat.py  2-04-prompttemplate_placeholder.py  2-05-outputparser_string.py  2-06-outputparser_json.py  2-07-loader-pypdf.py  2-08-textsplitter_recursive.py  2-09-embedding_openai.py  2-10-vectorstore_cheoma.py  2-11-retriever_chroma.py  2-12-tool_mode.py  2-13-chain_llmmodel.py  2-14-lcel_llmmodel.py  2-15-lcel_jsonoutput.py  5-01-runnable_sequence.py  5-02-runnable_sequence_def.py  5-03-runnable_parallel.py  5-04-runnable_parallel_stream.py  5-05-runnable_passthrough.py  5-06-runnable_passthrough_assign.py  5-07-runnable_passthrough_rag.py  5-08-prompt_fewshot.py  5-09-prompt_chatfewshot.py  5-10-prompt_pipeline.py  5-11-selector_length.py  5-12-selector_similarity.py  5-13-outputparser_fixing.py  5-14-outputparser_retry.py  5-15-loader_unstructured.py  5-16-retriever_compress_llmchain.py  5-17-retriever_compress_cohere.py  README.txt  common.fnc  init-env.sh  requirements.txt
202408-chap3-langchain-translate/: README.txt  demo1.sh  init-env.sh  langchain_streamlit_demo1.py  langchain_streamlit_demo1.sh  requirements.txt  test.py  test1.py  test2.py  test3.py
202509-chap2/: README.txt  init-env.sh  requirements.txt
202509-chap3/: .env  LICENSE  README.md  README.txt  agent.py  agent2.py  agent3.py  agent4.py  agent5.py  app.py  main.py  pyproject.toml  requirements.txt
202509-chap3/docs/: 20251026-agent3-dialog.md
(+38 files in other folders)
